apps/deurmat/authMiddleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basicauth
  namespace: deurmat
spec:
  basicAuth:
    secret: user-secret
